# usboot

./: Cargo.toml  README.md
.github/workflows/: build.yml  release-setup.yml
src/: amlogic.rs  lib.rs
src/amlogic/: error.rs  socid.rs
src/common/: mod.rs
tests/: amlogic.rs
